@@ -101,7 +101,6 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		mySearchCoordinatorSvcImpl = ProxyUtil.getSingletonTarget(mySearchCoordinatorSvc, SearchCoordinatorSvcImpl.class);
 		mySearchCoordinatorSvcImpl.setLoadingThrottleForUnitTests(null);
 		mySearchCoordinatorSvcImpl.setSyncSizeForUnitTests(QueryParameterUtils.DEFAULT_SYNC_SIZE);
-//		myCaptureQueriesListener.setCaptureQueryStackTrace(true);
 		myStorageSettings.setHibernateSearchIndexSearchParams(false);
 		initResourceTypeCacheFromConfig();
 	}
@@ -273,7 +272,6 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		String uuid = results.getUuid();
 		ourLog.info("** Search returned UUID: {}", uuid);
 
-//		assertEquals(200, myDatabaseBackedPagingProvider.retrieveResultList(mySrd, uuid).size().intValue());
 		assertEquals(200, results.size().intValue());
 		ourLog.info("** Asking for results");
 		List<String> ids = toUnqualifiedVersionlessIdValues(results, 0, 5, true);
@@ -610,7 +608,7 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 	private List<SqlQuery> findGroupByQueries() {
 		List<SqlQuery> queries = myCaptureQueriesListener.getSelectQueries();
 		queries = queries.stream().filter(q -> q.getSql(true, false).toLowerCase().contains("group by"))
-			.collect(Collectors.toList());
+			.toList();
 		return queries;
 	}
 
@@ -649,7 +647,7 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 			Search search = mySearchEntityDao.findByUuidAndFetchIncludes(uuid).orElseThrow(() -> new InternalErrorException(""));
 			assertEquals(51, search.getNumFound());
 			assertEquals(search.getNumFound(), mySearchResultDao.count());
-			assertEquals(null, search.getTotalCount());
+			assertNull(search.getTotalCount());
 			assertEquals(SearchStatusEnum.PASSCMPLET, search.getStatus());
 			assertEquals(1, search.getVersion().intValue());
 		});
@@ -839,8 +837,9 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		myCaptureQueriesListener.logSelectQueries();
 
 		String selectQuery = myCaptureQueriesListener.getSelectQueries().get(1).getSql(true, true);
-		assertThat(selectQuery).contains("HASH_VALUE");
-		assertThat(selectQuery).doesNotContain("HASH_SYS");
+		assertThat(selectQuery)
+			.contains("HASH_VALUE")
+			.doesNotContain("HASH_SYS");
 
 	}
 
@@ -879,7 +878,7 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 			.getSelectQueriesForCurrentThread()
 			.stream()
 			.map(t -> t.getSql(true, false))
-			.collect(Collectors.toList());
+			.toList();
 
 		String resultingQueryNotFormatted = queries.get(0);
 		assertThat(StringUtils.countMatches(resultingQueryNotFormatted, "Patient.managingOrganization")).as(resultingQueryNotFormatted).isEqualTo(1);
@@ -1039,7 +1038,7 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		searchParameter1.setExpression("Procedure.extension('Procedure#focalAccess')");
 		searchParameter1.setXpathUsage(SearchParameter.XPathUsageType.NORMAL);
 		searchParameter1.setStatus(Enumerations.PublicationStatus.ACTIVE);
-		IIdType sp1Id = mySearchParameterDao.create(searchParameter1).getId().toUnqualifiedVersionless();
+		mySearchParameterDao.create(searchParameter1).getId().toUnqualifiedVersionless();
 		// SearchParam - focalAccess
 		SearchParameter searchParameter2 = new SearchParameter();
 		searchParameter2.addBase("Provenance");
@@ -1048,7 +1047,7 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		searchParameter2.setExpression("Provenance.extension('Provenance#activity')");
 		searchParameter2.setXpathUsage(SearchParameter.XPathUsageType.NORMAL);
 		searchParameter2.setStatus(Enumerations.PublicationStatus.ACTIVE);
-		IIdType sp2Id = mySearchParameterDao.create(searchParameter2).getId().toUnqualifiedVersionless();
+		mySearchParameterDao.create(searchParameter2).getId().toUnqualifiedVersionless();
 		mySearchParamRegistry.forceRefresh();
 
 		BodyStructure bs = new BodyStructure();
@@ -1080,13 +1079,13 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		procedure.setSubject(new Reference("Patient/P1"));
 		procedure.setStatus(Procedure.ProcedureStatus.COMPLETED);
 		procedure.setCategory(categoryCodeableConcept1);
-		Extension extProcedure = procedure
+		procedure
 			.addExtension()
 			.setUrl("Procedure#focalAccess")
 			.setValue(new UriType("BodyStructure/" + bsId.getIdPartAsLong()));
 		procedure.getMeta()
 			.addTag("acc_procext_fkc", "1STCANN2NDL", "First Successful Cannulation with 2 Needles");
-		IIdType procedureId = myProcedureDao.create(procedure).getId().toUnqualifiedVersionless();
+		myProcedureDao.create(procedure).getId().toUnqualifiedVersionless();
 
 		Device device = new Device();
 		device.setManufacturer("Acme");
@@ -1095,7 +1094,7 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		Provenance provenance = new Provenance();
 		provenance.setActivity(new CodeableConcept().addCoding(new Coding().setSystem("http://hl7.org/fhir/v3/DocumentCompletion").setCode("PA")));
 		provenance.addAgent().setWho(new Reference(deviceId));
-		IIdType provenanceId = myProvenanceDao.create(provenance).getId().toUnqualifiedVersionless();
+		myProvenanceDao.create(provenance).getId().toUnqualifiedVersionless();
 
 		logAllResources();
 		logAllResourceTags();
@@ -1119,14 +1118,15 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 			IBundleProvider outcome = myProcedureDao.search(map, new SystemRequestDetails());
 			ourLog.info("Search returned {} resources.", outcome.getResources(0, 999).size());
 			myCaptureQueriesListener.logSelectQueriesForCurrentThread();
+			assertEquals(2, myCaptureQueriesListener.logSelectQueries().size());
 
-			String selectQuery = myCaptureQueriesListener.getSelectQueriesForCurrentThread().get(0).getSql(true, false);
+			String selectQuery = myCaptureQueriesListener.getSelectQueriesForCurrentThread().get(1).getSql(true, false);
 			// Check for a particular WHERE CLAUSE in the generated SQL to make sure we are verifying the correct query
 			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), " join hfj_res_link ")).as(selectQuery).isEqualTo(2);
 
 			// Ensure that we do NOT see a couple of particular WHERE clauses
-			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_type = 'procedure'")).as(selectQuery).isEqualTo(0);
-			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_deleted_at is null")).as(selectQuery).isEqualTo(0);
+			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_type = 'procedure'")).as(selectQuery).isZero();
+			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_deleted_at is null")).as(selectQuery).isZero();
 		}
 
 		// Search example 2:
@@ -1147,14 +1147,15 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 			IBundleProvider outcome = myProcedureDao.search(map, new SystemRequestDetails());
 			ourLog.info("Search returned {} resources.", outcome.getResources(0, 999).size());
 			myCaptureQueriesListener.logSelectQueriesForCurrentThread();
+			assertEquals(2, myCaptureQueriesListener.logSelectQueries().size());
 
-			String selectQuery = myCaptureQueriesListener.getSelectQueriesForCurrentThread().get(0).getSql(true, false);
+			String selectQuery = myCaptureQueriesListener.getSelectQueriesForCurrentThread().get(1).getSql(true, false);
 			// Check for a particular WHERE CLAUSE in the generated SQL to make sure we are verifying the correct query
 			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), " join hfj_res_link ")).as(selectQuery).isEqualTo(1);
 
 			// Ensure that we do NOT see a couple of particular WHERE clauses
-			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_type = 'procedure'")).as(selectQuery).isEqualTo(0);
-			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_deleted_at is null")).as(selectQuery).isEqualTo(0);
+			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_type = 'procedure'")).as(selectQuery).isZero();
+			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_deleted_at is null")).as(selectQuery).isZero();
 		}
 
 		// Search example 3:
@@ -1172,13 +1173,13 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 			myCaptureQueriesListener.clear();
 			IBundleProvider outcome = myProvenanceDao.search(map, new SystemRequestDetails());
 			ourLog.info("Search returned {} resources.", outcome.getResources(0, 999).size());
-			//assertEquals(1, outcome.getResources(0, 999).size());
 			myCaptureQueriesListener.logSelectQueriesForCurrentThread();
+			assertEquals(1, myCaptureQueriesListener.logSelectQueries().size());
 
 			String selectQuery = myCaptureQueriesListener.getSelectQueriesForCurrentThread().get(0).getSql(true, false);
 			// Ensure that we do NOT see a couple of particular WHERE clauses
-			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_type = 'provenance'")).as(selectQuery).isEqualTo(0);
-			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_deleted_at is null")).as(selectQuery).isEqualTo(0);
+			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_type = 'provenance'")).as(selectQuery).isZero();
+			assertThat(StringUtils.countMatches(selectQuery.toLowerCase(), ".res_deleted_at is null")).as(selectQuery).isZero();
 		}
 	}
 
@@ -1573,7 +1574,7 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 			.getSelectQueriesForCurrentThread()
 			.stream()
 			.map(t -> t.getSql(true, false))
-			.collect(Collectors.toList());
+			.toList();
 
 		// The first query is the forced ID resolution this time
 		assertThat(queries).hasSize(3);
@@ -1591,7 +1592,4 @@ public class FhirResourceDaoR4SearchOptimizedTest extends BaseJpaR4Test {
 		// Ensure that the search actually worked
 		assertEquals(5, search.size().intValue());
 	}
-
-
-
 }
